Fix hamburger button bg after dark mode implementation

--- a/media/css/cms/flare26-theme.css
+++ b/media/css/cms/flare26-theme.css
@@ -179,6 +179,7 @@ Contextual CSS custom properties that change based on context (e.g. layout direc
         /* Navigiation menu */
         --fl-logo-url: url('/media/img/logos/firefox/logo-word-hor-white.svg');
         --fl-menu-title-color: var(--token-color-white);
+        --fl-menu-hamburger-bg: var(--token-color-medium-purple);
         --fl-menu-panel-border-color: var(--token-color-link-purple);
         --fl-menu-panel-box-shadow-color: var(--token-color-light-purple-20);
         --fl-menu-category-link-bg-color: var(--token-color-light-purple-20);
